# FinancialEngineeringProjects

./: .gitignore  LICENSE  README.md  Test_data2.xlsx  Test_data2_with_predictions.xlsx  model.pt  predictions.csv  pyproject.toml  scaler.joblib
PredictingOptionsPricesUsingNeuralNetworks/: Black-Scholes_SIMULATED DATA.xlsx  NAIHT_Missing_IDs.numbers  main.py
model_artifacts/: best_model.keras  final_model.keras  scaler.joblib
